Update imports and add test

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,4 +4,4 @@ style = pep440
 versionfile_source = prot_tools/_version.py
 versionfile_build = prot_tools/_version.py
 tag_prefix =
-parentdir_prefix = xlink_kme_sbml-
+parentdir_prefix = prot_tools-
